--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.9/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.9/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.9/addons/p5.sound.min.js"></script>-->
+    <title>Jogo da Cobrinha</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
-    <p style="font-size: 60px; margin-left: 0%"> Snake Game AI </p>
-    <div id="gameFrame">
-      <script src="./p5/p5.min.js"></script>
-      <script src="sketch.js"></script>
-      <script src="snake.js"></script>
-      <script src="heuristic.js"></script>
-      <script src="geneticAlgo.js"></script>
+    <h1>Jogo da Cobrinha</h1>
+    <div>
+      <script src="node_modules/p5/lib/p5.min.js"></script>
+      <script src="js/sketch.js"></script>
+      <script src="js/snake.js"></script>
+      <script src="js/heuristic.js"></script>
+      <script src="js/geneticAlgo.js"></script>
     </div>
   </body>
 </html>
