--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/sketch.js"></script>
     <script src="js/snake.js"></script>
     <script src="js/heuristic.js"></script>
-    <script src="js/geneticAlgo.js"></script>
+    <script src="js/genetics.js"></script>
 </div>
 </body>
 </html>
