--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Jogo da Cobrinha</h1>
 <p><strong>Jogos:</strong> <span id="games">0</span></p>
 <p><strong>Vidas restantes:</strong> <span id="lifes">0</span></p>
+<p><strong>Score:</strong> <span id="score">0</span></p>
 <div>
     <script src="node_modules/p5/lib/p5.min.js"></script>
     <script src="js/sketch.js"></script>
